admin-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: dev
spec:
  selector:
    app: admin-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
