landing-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: dev
spec:
  selector:
    app: landing-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
