service-ams-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ams-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8091
      targetPort: 8091
  selector:
    app: ams
