service-bms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-bms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: bms
