service-cms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-cms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: cms
