service-ems-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ems-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ems
