service-exms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-exms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: exms
