service-otp-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-otp-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: otp
