service-sms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-sms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8094
      targetPort: 8094
  selector:
    app: sms
