service-tms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-tms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: tms
