service-ums-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ums-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: ums
