service-vms-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-vms-nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8088
      targetPort: 8088
  selector:
    app: vms
